@@ -80,7 +80,7 @@ public:
     void registerSocketNotifier(QSocketNotifier *socketNotifier);
     void unregisterSocketNotifier(QSocketNotifier *socketNotifier);
 
-    void registerTimer(int timerId, int interval, QObject *object);
+    void registerTimer(int timerId, int interval, Qt::TimerType timerType, QObject *object);
     bool unregisterTimer(int timerId);
     bool unregisterTimers(QObject *object);
     QList<TimerInfo> registeredTimers(QObject *object) const;
