@@ -121,7 +121,7 @@ public:
     void registerSocketNotifier(QSocketNotifier *notifier);
     void unregisterSocketNotifier(QSocketNotifier *notifier);
 
-    void registerTimer(int timerId, int interval, QObject *object);
+    void registerTimer(int timerId, int interval, Qt::TimerType timerType, QObject *object);
     bool unregisterTimer(int timerId);
     bool unregisterTimers(QObject *object);
     QList<TimerInfo> registeredTimers(QObject *object) const;
@@ -137,6 +137,7 @@ private:
 struct MacTimerInfo {
     int id;
     int interval;
+    Qt::TimerType timerType;
     QObject *obj;
     bool pending;
     CFRunLoopTimerRef runLoopTimer;
